# solx

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  README.md  SKILL.md
.claude/: .nfs000000027491affe000182d0
.github/workflows/: ci.yml  release.yml  rust-ci.yml
docs/: PLAN.md  ROADMAP.md  coverage.md  name.md  scratch.md  solx-smoke.md  solx.md  stage-1-skill.md  stage-2-solx.md  stage-3-integration.md
evals/: README.md  evals.example.json
evals/mocks/: README.md  activate.sh
evals/mocks/home/: .solkeep  scratch-dirs-inactive.csv  scratch-dirs-over-90days.csv  scratch-dirs-pending-removal.csv
evals/parity/: README.md  compare_runs.py  run_matrix.sh
evals/parity/fixtures/: config-nokeep.toml  config-sample.toml  (+1 more)
evals/runner/: README.md  bench_solx_latency.sh  build_sandbox_home.sh  run_l2_renew.py
references/: scratch.md
scripts/: build-cheatsheet.sh  sol_renew.py
skills/sol-skill/: SKILL.md
solx/: Cargo.toml  DEVELOPMENT.md  README.md  pyproject.toml
solx-rs/: Cargo.toml  DEVELOPMENT.md  README.md
solx-rs/assets/: _solx.zsh  solx.bash  solx.fish
solx-rs/src/: completions.rs  config.rs  init.rs  jobs.rs  keep.rs  main.rs  output.rs  side.rs  slurm.rs
solx-rs/tests/: cli.rs
solx/assets/: _solx.zsh  solx.bash  solx.fish
solx/scripts/: build-pyz.sh  install.sh
solx/src/: cheatsheet.rs  completions.rs  config.rs  gitwild.rs  init.rs  jobs.rs  keep.rs  main.rs  output.rs  side.rs  slurm.rs
solx/src/solx/: __init__.py  __main__.py  _completions.py  cli.py  config.py  init.py  jobs.py  keep.py  main.py  output.py  session.py  side.py  slurm.py  sol_cmds.py
solx/tests/: cli.rs  conftest.py  test_cli.py  test_completions.py  test_config.py  test_init.py  test_jobs.py  test_keep.py  test_main.py  test_output.py  test_session.py  test_side.py  test_slurm.py  test_sol_cmds.py
(+13 files in other folders)
