[package]
name = "solx"
version = "1.0.0"
edition = "2021"
description = "CLI for ASU's Sol supercomputer."
license = "MIT"

[[bin]]
name = "solx"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
toml = { version = "0.8", features = ["preserve_order"] }
csv = "1"
ignore = "0.4"
filetime = "0.2"
shlex = "1"
regex = "1"
libc = "0.2"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
