[project]
name = "solx"
version = "0.3.3"
description = "CLI for ASU's Sol supercomputer."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Shu Wan" },
]
keywords = ["asu", "sol", "hpc", "slurm", "cli"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Distributed Computing",
]
dependencies = [
  "typer>=0.12",
  "rich>=13",
  "pathspec>=0.12",
]

[project.scripts]
solx = "solx.cli:app"

[project.urls]
Homepage = "https://github.com/Shu-Wan/sol-skills"
Issues = "https://github.com/Shu-Wan/sol-skills/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/solx"]

[dependency-groups]
dev = [
  "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers"]
